changed footer color to red

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
 }
 footer{
     background-color:#005a8b;
-    color:white;
+    color:red;
     text-align: center;
     padding:1rem;
     padding-right:0px;
